--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am starting a new career</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to do basically anything outdoors</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being a parent is pretty cool but the pay sucks</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is very interesting and I like the possibilities</p>
     </section>
 
     <footer id="footer">
